src/components/GalleryImageLarge/GalleryImageLarge.scss
.fullscreenPopUp {
    position: fixed;
    height: 100vh;
    width: 100%;
    top: 0px;
    left: 0px;
    z-index: 999999;
    background-color: rgba(0, 0, 0, 0.75) !important;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.largeImageWrapper {
    position: relative;
    margin: auto;
    display: flex;
    flex-direction: column;
    width: 80vw;
    height: 80vh;
    max-width: 100vh;
}

.imageButton {
    display: flex;
    justify-content: center;
    align-items: center;
    position: absolute;
    color: rgb(255, 255, 255);
    z-index: 100;
}

.imageButton img {
    filter: invert(100%) drop-shadow(2px 2px 2px rgb(0 0 0 / 0.4)) drop-shadow(-2px -2px 2px rgb(0 0 0 / 0.4)) drop-shadow(-2px 2px 2px rgb(0 0 0 / 0.4)) drop-shadow(2px -2px 2px rgb(0 0 0 / 0.4));
    transition: scale 250ms;
}

.imageButton:hover img {
    scale: 1.15;
}

.closeButton {
    width: 40px;
    height: 40px;
    float: right;
    top: 12px;
    right: 12px;
}

.closeButton img {
    width: 27px;
}

.arrowLeftButton,
.arrowRightButton {
    padding: 16px 16px;
    width: 80px;
    height: 200px;
}

.arrowRightButton {
    right: -64px;
}

.arrowLeftButton {
    left: -64px;
}

.arrowLeftButton img {
    rotate: 180deg;
}

.largeImage {
    object-fit: contain;
    width: 100%;
    height: 100%;
}

.imageInformationWrapper {
    max-width: 80vw;
    min-width: calc(min(80vw, 500px));
    background-color: white;
    padding: 4px 16px 8px 16px;
}

@media (max-width: 767px) {
    .largeImageWrapper {
        margin: 16px;
        width: calc(100vw - 64px);
        //height: auto;
        min-height: 60vh;
        max-height: 80vh;
    }

    .imageInformationWrapper {
        max-width: 100vw;
    }

    .closeButton img {
        width: 32px;
    }

    .closeButton {
        width: 80px;
        height: 80px;
    }

    .arrowRightButton {
        right: -24px;
    }

    .arrowLeftButton {
        left: -24px;
    }
}

